polregio scraper fixes